--- a/style.css
+++ b/style.css
@@ -65,20 +65,21 @@ h1, span {
 
 
 .upper {
-    background-color: lightpink;
+    
     padding:0.5em;
-    margin: 120px auto 0;
+    margin: 125px auto 0;
     
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
     
     justify-content: space-around;
+    width: 80%;
     
   }
   
   .box {
-     background-color: lightblue;
+
      margin: 0.5em;
     width: 50%;
   }
@@ -106,15 +107,19 @@ h1, span {
   }
   
   .strips {
-    background-color: lightgreen;
+    background-color:  hsl(300, 24%, 96%);
     border-radius: 10px;
+
+    color: hsl(300, 43%, 22%);
+    font-weight: 700;
 
     display: flex;
 
     padding: 18px;
     max-width: 445px;
   }
-  
+
+ 
   .strip-one {
     margin: 0;
   }
@@ -138,6 +143,9 @@ h1, span {
     justify-content: space-around;
 
     margin: 50px 165px;
+
+    width: 80%;
+    
   }
   
   .card {
@@ -149,18 +157,36 @@ h1, span {
     display: flex;
     
     flex-wrap: wrap;
+    align-items: center;
   }
-  
-  .image {
+
+  .card > img {
     border-radius: 50%;
-    background-color: purple;
     margin-right: 30px;
   }
+
   
   .irene {
-    margin-top: 20px;
+    margin: 20px;
   }
   
   .anne {
-    margin-top: 40px;
+    margin: 40px;
+  }
+
+  .white {
+    color: hsl(0, 0%, 100%);
+  }
+
+  .soft-pink {
+    color: hsl(333, 80%, 67%);
+  }
+
+  .review  {
+    margin-top: 30px;
+    font-weight: 500;
+  }
+
+  .name :first-child {
+    margin-bottom: 0.5rem;
   }
