--- a/style.css
+++ b/style.css
@@ -6,13 +6,16 @@
 }
 
 body {
-    margin: 0;
-    width: 1440px;
+   
+    
     background-image: url('./images/bg-pattern-top-desktop.svg'), url('./images/bg-pattern-bottom-desktop.svg');
     background-repeat: no-repeat;
     background-position: top bottom;
     font-family: 'Spartan', sans-serif;
     font-size: 15px;
+    margin: 0 auto;
+
+    width: 1440px;
     
 }
 
@@ -24,64 +27,25 @@ img {
     margin-right: 30px;
 }
 
-/* .container-one {
-    display: flex;
-    margin: 120px auto;
-    padding: 10px;
-    width: 1130px;
-}
-
-h1, span {
-    color: hsl(300, 43%, 22%);
-    font-weight: 700;
-}
-
-.title {
-    font-size: 55px;
-    margin: 0%;
-}
-
-.header {
-    margin-right: 145px;
-    max-width: 450px;
-}
-
-.desc {
-    color:hsl(303, 10%, 53%);
-}
-
-.ratings {
-    background-color: aqua;
-}
-.strip {
-    background-color: hsl(300, 24%, 96%);
-    border-radius: 10px;
-    padding: 20px;
-    margin: 18px;
-    max-width: 450px;
-}
- */
-
-
 
 .upper {
-    
+
     padding:0.5em;
-    margin: 125px auto 0;
+    margin: 80px auto 0;
     
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
     
     justify-content: space-around;
-    width: 80%;
+    width: 90%;
     
   }
   
   .box {
 
      margin: 0.5em;
-    width: 50%;
+     width: 50%;
   }
   
   .title {
@@ -133,60 +97,54 @@ h1, span {
   }
 
 
-  .container {
-    background-color: blue;
+ .container {
+
+  margin: 70px auto 0;
+  padding:0.5em;
+
+      
+  display: flex;
     
-    display: flex;
+  justify-content: space-around;
 
-    flex-wrap: wrap;
-    
-    justify-content: space-around;
+  width: 90%;
+ } 
 
-    margin: 50px 165px;
+ .card {
+  background-color: hsl(300, 43%, 22%);
+  border-radius: 10px;
 
-    width: 80%;
-    
-  }
-  
-  .card {
-    background-color: lightpink;
-    border-radius: 10px;
-    padding: 20px;
-    max-width: 360px;
-    
-    display: flex;
-    
-    flex-wrap: wrap;
-    align-items: center;
-  }
+  display: flex;
+  flex-wrap: wrap;
 
-  .card > img {
-    border-radius: 50%;
-    margin-right: 30px;
-  }
+  margin: 20px;
+  padding: 20px;
+  width: 33%;
+ }
+ 
+ .image > img {
+   border-radius: 50%;
+   width: 50%;
+ }
 
-  
-  .irene {
-    margin: 20px;
-  }
-  
-  .anne {
-    margin: 40px;
-  }
+ .irene {
+   margin-top: 40px;
+ }
 
-  .white {
-    color: hsl(0, 0%, 100%);
-  }
+ .anne {
+   margin-top: 60px;
+ }
+
+ .white {
+   margin-bottom: 10px;
+   color: hsl(0, 0%, 100%);
+ }
 
   .soft-pink {
-    color: hsl(333, 80%, 67%);
-  }
+   color: hsl(333, 80%, 67%);
+ }
 
-  .review  {
-    margin-top: 30px;
-    font-weight: 500;
-  }
-
-  .name :first-child {
-    margin-bottom: 0.5rem;
-  }
+.desc {
+  color: hsl(0, 0%, 100%);
+  margin-top: 20px;
+}
